Fix burger menu scrolling on mobile

--- a/Yak/Yak/ClientApp/src/components/Nav/Nav.scss
+++ b/Yak/Yak/ClientApp/src/components/Nav/Nav.scss
@@ -62,8 +62,8 @@
 }
 
 .BurgerMenu {
-  position: fixed;
-  right: 1.5em;
+  position: absolute;
+  right: .5em;
   top: 2.25em;
   height: .1em;
   width: 2.5em;
@@ -134,7 +134,7 @@
     display: none;
     position: fixed;
     border-radius: .5em;
-    top: 0.875em;
+    top: 0.5em;
     right: 1.125em;
     height: 3.25em;
     width: 3.25em;
@@ -177,7 +177,10 @@
   
   .BurgerMenu {
     &--on {
+      right: 1.5em;
+      top: 3em;
       background-color: transparent;
+      position: fixed;
       transition: all .25s;
       &:before {
         transition: all .25s;
@@ -198,6 +201,7 @@
     &--collapsed {
       display: block;
       z-index: 999;
+      position: absolute;
     }
 
     &-list {
